# whatsremind

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  fix-ui.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test_excel.cjs
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: release.yml
docs/: user-manual-notes.md
scripts/: build-sidecar.js
sidecar/: index.js  package.json
sidecar/auth_info_baileys/: app-state-sync-key-AAAAAIjC.json  app-state-sync-version-critical_block.json  app-state-sync-version-critical_unblock_low.json  app-state-sync-version-regular.json  creds.json  identity-key-107435134058628_1.0.json  identity-key-154980220678250_1.0.json  identity-key-202078311973112_1.0.json  identity-key-234548365361172_1.0.json  lid-mapping-10565669912586_reverse.json  lid-mapping-10741864202383_reverse.json  lid-mapping-107435134058628_reverse.json  lid-mapping-107588997935158_reverse.json  lid-mapping-121839699411077_reverse.json  lid-mapping-125043845685422_reverse.json  lid-mapping-12815416261.json  (+968 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  sidecar.rs  state.rs
src-tauri/src/commands/: clients.rs  config.rs  excel.rs  history.rs  license.rs  mod.rs  sending.rs  templates.rs
src-tauri/src/db/: clients.rs  mod.rs  schema.sql
src-tauri/src/models/: mod.rs
src-tauri/src/services/: crypto.rs  excel.rs  meta_api.rs  mod.rs  spintax.rs
(+15 files in other folders)
