[package]
name = "whatsremind"
version = "0.1.0"
description = "WhatsApp bulk messaging desktop client"
authors = []
edition = "2021"

[lib]
name = "ws_remind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
calamine = "0.26"
reqwest = { version = "0.12", features = ["json"] }
governor = "0.7"
thiserror = "1"
async-trait = "0.1.89"
phonenumber = "0.3.9"
chrono = "0.4.45"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"

